--- a/src/index.html
+++ b/src/index.html
@@ -5,7 +5,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <link rel="stylesheet" href="./styles/normalize.css" />
-    <link rel="stylesheet" href="style.css" />
     <title>Document</title>
 
     <link rel="stylesheet" href="styles/style.css" />
@@ -13,7 +12,39 @@
   <body>
     <!-- Header -->
     <header class="section-outer section-header">
-      <div class="section-inner">Header</div>
+      <div class="section-inner">
+        <h1 class="header-head">
+          Когнитивные<br />
+          искажения<br />
+          <span>в программировании</span>
+        </h1>
+        <img src="./images/main.png" alt="typing man" class="header-img" />
+        <article class="article header-article">
+          <div class="left-part-article">
+            <p class="inner-text">
+              Мы, разработчики, часто сталкиваемся с проблемами, которые идут
+              вразрез с нашей продуктивностью. Но мы часто игнорируем целостную
+              картину. Некоторые из этих проблем малозаметны, некоторые
+              существенны. Иногда с ними можно как-то справиться, а иногда, к
+              сожалению, нет.
+            </p>
+          </div>
+          <div class="right-part-article">
+            <p class="inner-text">
+              Вместе они формируют что-то вроде замкнутого цикла, и это может
+              привести к длительной потере продуктивности, багам и бесконечному
+              разочарованию.
+            </p>
+            <p class="inner-text">
+              Если мы сможем минимизировать воздействие одного или нескольких из
+              этих факторов, то сможем сломать и цикл, а остатки нейтрализовать.
+            </p>
+            <div class="btn-wrapper">
+              <a href="#navigation" class="btn header-btn">ПОДРОБНЕЕ</a>
+            </div>
+          </div>
+        </article>
+      </div>
     </header>
     <!-- / Header -->
     <main>
@@ -24,7 +55,7 @@
       <!-- / Video -->
 
       <!-- Navigation -->
-      <section class="section-outer section-navigation">
+      <section class="section-outer section-navigation" id="navigation">
         <div class="section-inner">Navigation</div>
       </section>
       <!-- / Navigation -->
